--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+
   sign_in_button: ^3.0.0
   flutter_svg: ^2.0.10+1
+
+  # Icon
+  cupertino_icons: ^1.0.2
+  iconsax: ^0.0.8
+
+  # State Management
+  get: ^4.6.6
+  get_storage: ^2.1.1
+
+
+  http: ^1.1.0
+  intl: ^0.19.0
+  logger: ^2.0.2+1
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
