--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
 
   sign_in_button: ^3.0.0
   flutter_svg: ^2.0.10+1
+  smooth_page_indicator: ^1.1.0
 
   # Icon
   cupertino_icons: ^1.0.2
   iconsax: ^0.0.8
+  ionicons: ^0.2.2
 
   # State Management
   get: ^4.6.6
@@ -76,7 +78,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/logos/
+    - assets/fonts/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -92,9 +97,9 @@ flutter:
   fonts:
     - family: Poppins
       fonts:
-        - asset: fonts/poppins_regular.ttf
-        - asset: fonts/poppins_medium.ttf
-        - asset: fonts/poppins_semi_bold.ttf
+        - asset: assets/fonts/poppins_regular.ttf
+        - asset: assets/fonts/poppins_medium.ttf
+        - asset: assets/fonts/poppins_semi_bold.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
